tests/paczka1/fuzzy1/93360718.err
Error in line 10: oHV7b6 S749 13,8
Error in line 14: oHV7b6 S139 228,9
Error in line 17: oHV7b6 S95 43,4
Error in line 30: fVB6 A397 10,9
Error in line 38: fVB6 S95 73,5
Error in line 12: zD8IZr S95 88,4
